--- a/document.tex
+++ b/document.tex
@@ -97,7 +97,13 @@ IYCE, Power Electronics, MATLAB, Simulink, Motor Control, VFD, Model Driven Deve
 A modern VFD system must comply to many customer requiroment. There are also many industrial standard such as power factor regulations and EMC limitations wich are needed to control by software. The computation power of the embeddedd microcontrollers are capeble to achive this kind of sophistication, but the this power needed to be utilized by the programmer. The development cycles also getting shorter and shortet to met the constantly changing market demand. Therfore a modular, reusable and scalable control software need to be implemented. Modern software tools such as MATLAB and Simulink are very well suited to this task. The Embedded Coder toolbox generates the C code, wich can be complied in the embedded processor.
 
 \section{Embedded Framework}
-\blindtext
+
+-Embedded framework all the hardware dependent parts of the code
+-thatswhy the generated code can be hardware independent
+-Connection to the model through interfacefaces
+-the scheduler is in c 
+-the interfacing with the model: Through the  
+
 \section{Simulink Model}
 \blindtext
 \section{Case Study: IGBT Thermal model}
