--- a/document.tex
+++ b/document.tex
@@ -94,7 +94,11 @@ IYCE, Power Electronics, MATLAB, Simulink, Motor Control, VFD, Model Driven Deve
 
 
 \section{Introduction}
-A modern VFD system must comply to many customer requiroment. There are also many industrial standard such as power factor regulations and EMC limitations wich are needed to control by software. The computation power of the embeddedd microcontrollers are capeble to achive this kind of sophistication, but the this power needed to be utilized by the programmer. The development cycles also getting shorter and shorter to met the constantly changing market demand. Therfore a modular, reusable and scalable control software need to be implemented. Modern software tools such as MATLAB and Simulink are very well suited to this task. The Embedded Coder toolbox generates the C code, wich can be complied in the embedded processor. Becouse the model is developped in Simulink, the behaviour of the implelemnted control algorythms can be tested immediatly, on the PC. When the simulations sows the desired results, the C code can be generated. This generated C code is 
+A modern VFD system must comply to many customer requiroments. There are also many industrial standard such as power factor regulations and EMC limitations wich are needed to control by software. The computation power of the embeddedd microcontrollers are capeble to achive this kind of sophistication, but the this power needed to be utilized by the programmer efficiently. The development cycles also getting shorter and shorter to met the constantly changing market demand. Therfore a modular, reusable and scalable control software need to be implemented.
+
+One of the ways of this new way of thinking about software development is model-driven or model-based development. This means we are using graphical diagrams to describe the desired functionality instead of lines of program code. In power electronics this kind of abstraction can seem contradictionary, becouse  of the strict timing constraints, but as this paper will show, with the correct methodes high level problem solving and low level IO handling can go hand in hand. There are even many benefits of model-based desing due to the implemented control loops and state machines, wich can be easily viusalised and simulated with the proper software tool.
+
+Modern software tools such as MATLAB and Simulink are very well suited to this task. The Embedded Coder toolbox generates the C code, wich can be complied in the embedded processor. Becouse the model is developped in Simulink, the behaviour of the implelemnted control algorythms can be tested immediatly, on the PC. When the simulations sows the desired results, the C code can be generated. This generated C code is 
 
 In the II. chapter we are going to discuss the embedded framework, wich provides the connection between the Simulink model and the real microcontroller outputs and inputs. The III. chapter will present a short insight in the Simulink model, and present the challanges you can face during the development. The IV. chapter will provide a case study about the whole method. The example will be a IGBT thermal model. We will compare the simulated data and the measured tempereatures.
 
@@ -102,9 +106,13 @@ In the II. chapter we are going to discuss the embedded framework, wich provides
 \section{Embedded Framework}
 
 -Embedded framework all the hardware dependent parts of the code
+
 -thatswhy the generated code can be hardware independent
+
 -Connection to the model through interfacefaces
+
 -the scheduler is in c 
+
 -the interfacing with the model: Through the  
 
 \section{Simulink Model}
