First figure include

--- a/document.tex
+++ b/document.tex
@@ -135,6 +135,16 @@ The Semisel calculator program is used for validating the junction temperature c
 After the successful offline simulation, C code is generated from the integrated model which was tested in the real inverter.
 The case, junction temperatures, phase currents was recorded in different setpoints on a drive testbench. The temperature vs. time function was simulated in Sumilink, then the simulated and measured junction temperatures were  plotted in a coordinate system, which was synchronized with the corresponding phase currents. The results can be seen in the figure.
 
+\begin{figure*}[!h]
+\centering
+\includegraphics[width=0.8\textwidth]{figures/homerseklet}
+% where an .eps filename suffix will be assumed under latex, 
+% and a .pdf suffix will be assumed for pdflatex; or what has been declared
+% via \DeclareGraphicsExtensions.
+\caption{Simulation Results}
+\label{fig_sim}
+\end{figure*}
+
 
 -Komponensek integrálása (referenced subsystem)
 
