--- a/document.tex
+++ b/document.tex
@@ -108,24 +108,27 @@ In the II. chapter we are going to discuss the embedded framework, wich provides
 The embedded framework provides connection between the generated code and the hardware peripherials. All the hardware dependent code is written in native C language. The scheduling of the generated code is made by an embedded operation system and hardware interrupts (timers, analog-digital converters, etc.). In this case all the generated code is hardware independent and reusable. The model connects to the embedded code thrugh interfaces. These interfaces are represented as Buses in Simulink and structs in C. The input structs contain the parameters and the and the measured inputs, the output interfaces give signals for the embedded operation framework (start stop signals etc.) and give the calculated duty cycles and the switching frequency. 
 On every PWM timer cycle timer interrupt is given. The timer pheripherial gives an interrupt to AD converters a new set of measurements available (Three phase currents and the DC voltage). The values which change slower then the switching period are measured in the main task. The measured AD values calculated to values in SI units. The outputs of the model are also in normalized number. In this case the connection between the embedded code and the model is also platform independent. Example the structure of the measured input values:
 
-typedef struct {
-  real32_T VxMeasured;
-  real32_T VyMeasured;
-  real32_T Vdc;
-  real32_T Ia;
-  real32_T Ib;
-  real32_T Ic;
-  real32_T Ta;
-  real32_T Tb;
-  real32_T Tc;
-  real32_T Tinner;
-  real32_T Tbrake;
-  real32_T V5Sto1Meas;
-  real32_T V5Sto2Meas;
-  real32_T V15Meas;
-  real32_T FANSpeed1;
-  real32_T FANSpeed2;
-} MeasurementIn;
+\begin{lstlisting}
+typedef struct \{ \\
+  real32_T VxMeasured; \\
+  real32_T VyMeasured; \\
+  real32_T Vdc; \\
+  real32_T Ia; \\
+  real32_T Ib; \\
+  real32_T Ic; \\
+  real32_T Ta; \\
+  real32_T Tb; \\
+  real32_T Tc; \\
+  real32_T Tinner; \\
+  real32_T Tbrake; \\
+  real32_T V5Sto1Meas; \\
+  real32_T V5Sto2Meas; \\
+  real32_T V15Meas; \\
+  real32_T FANSpeed1; \\
+  real32_T FANSpeed2; \\
+\} MeasurementIn;
+
+\end{lstlisting}
 
 All the measured inputs are 32 bit floating point numbers, the values start with V are voltages the values start with I are currents and the values start with T are temperatures.
 
@@ -137,6 +140,7 @@ There is the main task which scheduled by the os timer
 
 \section{Simulink Model}
 To be able to make offline measurements ans simulations the whole system is modeled with the excitations the inverter and the plant. Therefore the offline simulations can be done in Matlab Simulink enviroment and results can be compared to real life measurements. Testing is also important part of this model based developement. Thatswhy unit test enviroment built for every functional part of the of the inverter. To be able to test every part separeted, test enviroments has been made for them. These functions has the same input and output ports like the main model and the functionality models connect eachother through them. In Simulink the test excitations are given through these inputs and a behaviour is monitored through the outputs of these subsystem.  On the following chapters a case study is described about the IGBT thermal model.
+
 \section{Case Study: IGBT Thermal model}
 
 \subsection{The function of the Thermal model}
