--- a/preambale.tex
+++ b/preambale.tex
@@ -65,6 +65,7 @@
 %
 \documentclass[conference]{IEEEtran}
 \usepackage{blindtext, graphicx}
+%\usepackage{lstlisting}
 % Add the compsoc option for Computer Society conferences.
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
@@ -347,4 +348,3 @@
 
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
-
