--- a/document.tex
+++ b/document.tex
@@ -173,29 +173,22 @@ The three phase half-bridge IGBTs and brake IGBT temperature calculation is inte
 
 The test harness structure is the following: on the left side are the parameters and excitations. These blocks connected with the thermal model placed in the middle with the buses used in the integrated model. Output is on the right side. A model block created to calcalutethe one period average values of the output. The average values used for comparison with Semisel calculator.
 
-We can define the desired setpoint in the simulation environment. The simulink model source parameters are calculated with script. (Input parameters: DC voltage, phase current, $cos\phi{}$, switching frequency, heat sink temperature). The Simulink model generates the excitation signals during the simulation.
+We can define the desired setpoint in the simulation environment. The simulink model source parameters are calculated with script. (Input parameters: DC bus voltage, phase current, $cos\phi{}$, switching frequency, heat sink temperature). The Simulink model generates the excitation signals during the simulation.
 
-The Semisel calculator program is used for validating the calculated junction temperature. The Semisel software calculates the average temperature and the maximum temperature values of the selected device. Setting the same setpoint in the calculator program and in the simulation we expect the same result. The  semisel calculator doesn’t give information about the temperature vs time function, only shows the maximum temperatures. Because the junction temperatures are used for absolute temperature protections, comparing the simulated and calculated maximum temperature values is fullfilling our reuirements. The temperature should differ the direction of safety so the temperature values are considered to be acceptable if the difference of the simulated and calculated temperatures is in the 0.. +5 range.
+The Semisel calculator program is used for validating the calculated junction temperature. The Semisel software calculates the average temperature and the maximum temperature values of the selected device. Setting the same setpoint in the calculator program and in the simulation we expect the same result. The  semisel calculator doesn’t give information about the temperature vs time function, only shows the maximum temperatures. Because the junction temperatures are used for absolute temperature protections, comparing the simulated and calculated maximum temperature values is fullfilling our reuirements. The temperature should differ the direction of safety, so the calculated temepratures should be smaller, than the actual junction temperature. The temperature values are considered to be acceptable if the difference of the simulated and calculated temperatures is less than $5\ \degree{}C$ .
 
-\begin{figure}[!h]
-\centering
-\includegraphics[height=0.8\columnwidth, angle = 270]{figures/IGBthermal_test_env.pdf}
+After the successful offline simulation, if we see the desired results, the C code is generated from the integrated model which was tested in the real inverter.
 
-\caption{Test environment}
-\label{test_env}
-\end{figure}
-
-After the successful offline simulation, C code is generated from the integrated model which was tested in the real inverter.
-The case, junction temperatures, phase currents was recorded in different setpoints on a drive testbench. The temperature vs. time function was simulated in Sumilink, then the simulated and measured junction temperatures were  plotted in a coordinate system, which was synchronized with the corresponding phase currents. The results can be seen in the figure.
+The case, junction temperatures, phase currents was recorded in different setpoints on a drive testbench. The temperature vs. time function was simulated in Sumilink, then the simulated and measured junction temperatures were  plotted in a coordinate system, which was synchronized with the corresponding phase currents. The results can be seen in the figure \ref{fig:fig_sim}.
 
 \begin{figure*}[!h]
 \centering
-\includegraphics[width=0.8\textwidth]{figures/homerseklet}
+\includegraphics[width=0.9\textwidth]{figures/homerseklet}
 % where an .eps filename suffix will be assumed under latex, 
 % and a .pdf suffix will be assumed for pdflatex; or what has been declared
 % via \DeclareGraphicsExtensions.
 \caption{Simulation Results}
-\label{fig_sim}
+\label{fig:fig_sim}
 \end{figure*}
 
 % needed in second column of first page if using \IEEEpubid
@@ -308,15 +301,20 @@ The case, junction temperatures, phase currents was recorded in different setpoi
 
 
 \appendices
-\section{Proof of the First Zonklar Equation}
+\section{Simulink Models}
+\begin{figure*}[!H]
+\centering
+\includegraphics[height=0.8\textwidth, angle = 270]{figures/IGBthermal_test_env.pdf}
 
+\caption{Test environment}
+\label{test_env}
+\end{figure*}
 
 % use section* for acknowledgement
 \section*{Acknowledgment}
 
 
-The authors would like to thank...
-
+We would like to thank the opportunity to work on this project for Hyundai Technologies Center Hungary Ltd.
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
